# git_python_workshop

./: LICENSE  README.md  git_intro.py  pyproject.toml  requirements.txt
ruff_exercises/00_format/: bad.py  good.py  ruff.toml
ruff_exercises/01_lint_basics/: bad.py  ruff.toml
ruff_exercises/02_rules/: ruff.toml
ruff_exercises/02_rules/bad_original/: bad_original.py
ruff_exercises/02_rules/large_ruff_toml/: ruff.toml
ruff_exercises/03_docstrings/: ruff.toml
ruff_exercises/03_docstrings/bad_original/: bad_original.py
ruff_exercises/solutions/: 00_format.py  01_lint_basics.py  02_rules.py  03_docstrings.py
slides/: git_slides.pptx
src/git_python_workshop/: git_intro.py
