[project]
authors = [{name = "Eric", email = "eric.mei2000@gmail.com"}]
dependencies = []
name = "git_python_workshop"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64", "osx-64"]

[tool.pixi.pypi-dependencies]
git_python_workshop = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
numpy = ">=2.3.2,<3"
ruff = ">=0.12.9,<0.13"
